--- a/mental-gym-pro-frontend/src/styles/globals.css
+++ b/mental-gym-pro-frontend/src/styles/globals.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255; /* Blanco */
+    --background-start-rgb: 0, 0, 0; /* Negro */
+    --background-end-rgb: 0, 0, 0; /* Negro */
+  }
+}
